# AdventCode

./: .gitignore
2021/: .gitignore  day01.cpp  day02.cpp  day03.cpp  day04.cpp  makefile  pfile.cpp  pfile.h  putils.h
2022/01/: caloriecounting.py
2022/02/: rockpaperscisor.py
2022/03/: rucksackreog.py
2022/04/: campcleanup.py
2022/05/: supplystack.py
2022/06/: tuningtrouble.py
2022/07/: nospaceleftondevice.py
2022/08/: treetoptreehouse.py
2022/09/: ropebridge.py
2022/10/: cathoderaytube.py
2022/11/: monkeyinthemiddle.py
2022/12/: hillclimbing.py
2023/: .gitignore
2023/01/: trebuchet.py
2023/02/: cube_conundrum.py
2023/03/: gear_ratio.py
2023/04/: scratchcards.py
2023/05/: fertilizer.py
2023/06/: waitforit.py
2023/07/: camelcards.py
2023/08/: hauntedwasteland.py
2023/09/: miragemaintenance.py
2023/10/: pipemaze.py  (+1 more)
2024/: AdventDay.cpp  AdventDay.hpp  CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Days.hpp  main.cpp  utils.cpp  utils.hpp
2024/C/: day07.c  textlines.c  textlines.h
2024/data/: 2024data.7z  updatedata.sh
2024/python/: aoc.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py
2025/: day01  day01.cpp  day02  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day10.cpp  day11.cpp  day2.cpp  day4.cpp  day7.cpp  day8.cpp  day9.cpp  makefile  p2dmap.cpp  p2dmap.h  pchrono.cpp  pchrono.h  pfile.cpp  pfile.h  ptypes.h  putils.cpp
(+13 files in other folders)
